# RestaurantMenuAPI

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml  requirements.txt  start_server.sh  task.txt  temp.py  test.db
src/: config.py  database.py  main.py  models.py  utils.py
src/api/v1/auth/: router.py  utils.py
src/api/v1/employees/: models.py  router.py  schemas.py
src/api/v1/menus/: models.py  router.py  services.py
src/api/v1/restaurants/: models.py  router.py  schemas.py  services.py
src/api/v1/votes/: models.py  router.py  schemas.py  services.py
src/auth/: models.py  router.py  utils.py
src/employees/: models.py  router.py  schemas.py
src/menus/: models.py  router.py  schemas.py  services.py
src/restaurants/: models.py  router.py  schemas.py  services.py
src/votes/: models.py  router.py  schemas.py  services.py
tests/: test_auth.py
